--- a/tnn-css-animation/index.html
+++ b/tnn-css-animation/index.html
@@ -7,5 +7,9 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <img src="images/cloud.png" alt="" />
+    </div>
+  </body>
 </html>
